--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	            	</thead>
 	                <tbody id="insert-data">
 	                	<tr>
-	                		<td>hello</td>
-	                		<td>hello</td>
-	                		<td>hello</td>
-	                		<td>hello</td>
+	                		<td></td>
+	                		<td></td>
+	                		<td></td>
+	                		<td></td>
 	                	</tr>
 	                </tbody>
             	</table>
@@ -50,19 +50,19 @@
 			  <div class="panel-body">
 			    <form>
 				  <div class="form-group">
-				    <label for="exampleInputEmail1">Train Name</label>
+				    <label>Train Name</label>
 				    <input class="form-control" id="trainName" placeholder="Train Name...">
 				  </div>
 				  <div class="form-group">
-				    <label for="exampleInputPassword1">Destination</label>
+				    <label>Destination</label>
 				    <input class="form-control" id="destination" placeholder="Destination...">
 				  </div>
 				  <div class="form-group">
-				    <label for="exampleInputPassword1">First Arrival</label>
+				    <label>First Arrival (ex: 03:30)</label>
 				    <input class="form-control" id="initialTime" placeholder="First Arrival time...">
 				  </div>
 				  <div class="form-group">
-				    <label for="exampleInputPassword1">Frequency</label>
+				    <label>Frequency (ex: 15)</label>
 				    <input class="form-control" id="frequency" placeholder="Frequency">
 				  </div>
 				  <button type="submit" class="btn btn-default" id="submit-btn">Submit</button>
@@ -79,5 +79,6 @@
     <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
     </body>
 </html>
